<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingConstraints"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.star.theBigDipper.viewmodel.TabWalletVM" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/color_white"
        android:layout_height="match_parent">

        <include
            layout="@layout/layout_title"
            app:viewModel="@{viewModel}"
            android:id="@+id/title_layout" />

        <ScrollView
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_network_address_lab_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/wallet_main_network_address"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/color_25262a"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/main_network_address_value_tv"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingStart="9dp"
                    android:paddingEnd="9dp"
                    android:background="@drawable/bg_rectangle_round4_f5f6f9"
                    tools:text="ajasldgansadgjiasjfklaxlakjsf"
                    android:textColor="@color/color_717171"
                    android:textSize="14sp"
                    android:gravity="center_vertical|start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_network_address_lab_tv" />

                <ImageView
                    android:id="@+id/qr_code_iv"
                    android:layout_width="30dp"
                    android:background="@drawable/main_address_qr"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:transitionName="image"
                    android:layout_marginEnd="16dp"
                    onClickCommand="@{viewModel.showAddressCommand}"
                    android:contentDescription="@string/contentDescription"
                    app:layout_constraintTop_toTopOf="@+id/main_network_address_lab_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/main_network_address_lab_tv"
                    android:layout_height="30dp" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/main_network_address_value_tv"
                    android:background="@drawable/split_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="14dp"
                    android:layout_height="1dp" />


                <TextView
                    android:id="@+id/hop_tv"
                    style="@style/TokenTitle"
                    android:text="@string/hop"
                    app:layout_constraintTop_toBottomOf="@+id/line1"
                    app:drawableStartCompat="@drawable/hop_img" />

                <TextView
                    android:id="@+id/hop_unit_tv"
                    style="@style/TokenUnit"
                    android:text="@string/wallet_flow_unit_hop"
                    app:layout_constraintBaseline_toBaselineOf="@+id/hop_number_tv" />

                <TextView
                    android:id="@+id/hop_number_tv"
                    style="@style/TokenBalance"
                    app:layout_constraintTop_toTopOf="@+id/hop_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/hop_tv"
                    app:layout_constraintEnd_toStartOf="@+id/hop_unit_tv"
                    tools:text="100" />


                <View
                    android:id="@+id/line3"
                    app:layout_constraintTop_toBottomOf="@+id/hop_tv"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/split_line"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/eth_tv"
                    style="@style/TokenTitle"
                    android:text="@string/ethLabel"
                    app:layout_constraintTop_toBottomOf="@+id/line3"
                    app:drawableStartCompat="@drawable/eth_img" />

                <TextView
                    android:id="@+id/eth_unit_tv"
                    style="@style/TokenUnit"
                    android:text="@string/wallet_flow_unit_eth"
                    app:layout_constraintBaseline_toBaselineOf="@+id/eth_number_tv" />

                <TextView
                    android:id="@+id/eth_number_tv"
                    style="@style/TokenBalance"
                    app:layout_constraintBottom_toBottomOf="@+id/eth_tv"
                    app:layout_constraintEnd_toStartOf="@+id/eth_unit_tv"
                    app:layout_constraintTop_toTopOf="@+id/eth_tv"
                    tools:text="320" />

                <View
                    android:id="@+id/line4"
                    app:layout_constraintTop_toBottomOf="@+id/eth_tv"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/split_line"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/title_get_free_coin"
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/line4"
                    android:text="@string/wallet_get_free_coin_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/color_25262a"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/bg_get_free_hop_coin"
                    android:layout_width="0dp"
                    android:background="@drawable/bg_rectangle_round4_f5f6f9"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/title_get_free_coin"
                    android:layout_marginTop="2dp"
                    app:layout_constraintEnd_toStartOf="@+id/bg_get_free_eth_coin"
                    android:layout_height="125dp" />

                <View
                    android:id="@+id/bg_get_free_eth_coin"
                    android:layout_width="0dp"
                    android:background="@drawable/bg_rectangle_round4_f5f6f9"
                    app:layout_constraintStart_toEndOf="@+id/bg_get_free_hop_coin"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_get_free_coin"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="125dp" />

                <TextView
                    android:id="@+id/get_free_hop_title"
                    android:layout_width="wrap_content"
                    android:text="@string/wallet_get_free_hop"
                    android:textColor="@color/color_131517"
                    app:layout_constraintStart_toStartOf="@+id/bg_get_free_hop_coin"
                    app:layout_constraintEnd_toEndOf="@+id/bg_get_free_hop_coin"
                    app:layout_constraintBottom_toTopOf="@+id/apply_free_token_btn"
                    android:layout_marginBottom="6dp"
                    android:layout_height="wrap_content"
                    app:drawableTopCompat="@drawable/hop_icon" />

                <Button
                    android:id="@+id/apply_free_token_btn"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="@+id/bg_get_free_hop_coin"
                    app:layout_constraintEnd_toEndOf="@+id/bg_get_free_hop_coin"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/bg_get_free_hop_coin"
                    android:textSize="16sp"
                    android:background="@drawable/bg_get_free_coin_selector"
                    android:text="@string/wallet_get_free_coin"
                    android:layout_marginBottom="15dp"
                    onClickCommand="@{viewModel.applyFreeTokenCommand}"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:enabled="false"
                    android:layout_marginEnd="12dp"
                    android:textColor="@color/color_white"
                    android:layout_height="36dp" />

                <TextView
                    android:id="@+id/get_free_eth_title"
                    android:layout_width="wrap_content"
                    android:text="@string/wallet_get_free_eth"
                    android:textColor="@color/color_131517"
                    app:layout_constraintStart_toStartOf="@+id/bg_get_free_eth_coin"
                    app:layout_constraintEnd_toEndOf="@+id/bg_get_free_eth_coin"
                    app:layout_constraintBottom_toTopOf="@+id/apply_free_eth_btn"
                    android:layout_marginBottom="6dp"
                    android:layout_height="wrap_content"
                    app:drawableTopCompat="@drawable/eth_icon" />

                <Button
                    android:id="@+id/apply_free_eth_btn"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="@+id/bg_get_free_eth_coin"
                    app:layout_constraintEnd_toEndOf="@+id/bg_get_free_eth_coin"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/bg_get_free_eth_coin"
                    android:layout_marginBottom="15dp"
                    android:textSize="16sp"
                    onClickCommand="@{viewModel.applyFreeEthCommand}"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/bg_get_free_coin_selector"
                    android:text="@string/wallet_get_free_coin"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/color_white"
                    android:layout_height="36dp" />

                <View
                    android:id="@+id/line5"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="17dp"
                    android:background="@color/color_f6f6f7"
                    app:layout_constraintTop_toBottomOf="@+id/bg_get_free_hop_coin"
                    android:layout_height="8dp" />


                <TextView
                    android:id="@+id/create_account_tv"
                    style="@style/WalletLab"
                    onClickCommand="@{viewModel.createAccountCommand}"
                    app:layout_constraintTop_toBottomOf="@+id/line5"
                    android:text="@string/wallet_create" />

                <TextView
                    android:id="@+id/export_tv"
                    style="@style/WalletLab"
                    onClickCommand="@{viewModel.exportCommand}"
                    app:layout_constraintTop_toBottomOf="@+id/create_account_tv"
                    android:text="@string/wallet_export" />


                <TextView
                    android:id="@+id/version_tv"
                    style="@style/WalletLab"
                    app:layout_constraintTop_toBottomOf="@+id/export_tv"
                    android:gravity="center_vertical|start"
                    android:text="@{viewModel.versionObservable}"
                    android:lines="1" />

                <TextView
                    android:id="@+id/update_app_tv"
                    android:layout_width="wrap_content"
                    onClickCommand="@{viewModel.updateAppCommand}"
                    app:layout_constraintTop_toTopOf="@+id/version_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/version_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp"
                    android:text="@string/wallet_new_version"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/transaction_tv"
                    style="@style/WalletLab"
                    onClickCommand="@{viewModel.transactionCommand}"
                    app:layout_constraintTop_toBottomOf="@+id/version_tv"
                    android:text="@string/wallet_transaction" />

                <TextView
                    android:id="@+id/dns_tv"
                    style="@style/WalletLab"
                    onClickCommand="@{viewModel.dnsCommand}"
                    app:layout_constraintTop_toBottomOf="@+id/transaction_tv"
                    android:text="@{viewModel.dnsObservable}" />

                <TextView
                    android:id="@+id/operation_guide_tv"
                    style="@style/WalletLab"
                    onClickCommand="@{viewModel.guideCommand}"
                    app:layout_constraintTop_toBottomOf="@+id/dns_tv"
                    android:text="@string/wallet_operation_guide" />

                <TextView
                    android:id="@+id/help_tv"
                    style="@style/WalletLab"
                    onClickCommand="@{viewModel.helpCommand}"
                    app:layout_constraintTop_toBottomOf="@+id/operation_guide_tv"
                    android:text="@string/wallet_help" />

                <TextView
                    android:id="@+id/help_address_tv"
                    android:layout_width="wrap_content"
                    onClickCommand="@{viewModel.helpCommand}"
                    app:layout_constraintTop_toTopOf="@+id/help_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/help_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp"
                    android:text="@string/wallet_help_address"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/course_tv"
                    style="@style/WalletLab"
                    app:layout_constraintTop_toBottomOf="@+id/help_tv"
                    android:text="@string/wallet_course" />

                <TextView
                    android:id="@+id/course_address_tv"
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/course_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/course_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp"
                    onClickCommand="@{viewModel.courseAddressCommand}"
                    android:text="@string/wallet_course_address"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/clear_db_tv"
                    style="@style/WalletLab"
                    onClickCommand="@{viewModel.clearDBCommand}"
                    app:layout_constraintTop_toBottomOf="@+id/course_tv"
                    android:text="@string/wallet_clear_local_data" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>