<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingConstraints,ContentDescription">

    <data>

        <import type="com.star.theBigDipper.viewmodel.CreateAccountVM" />

        <variable
            name="viewModel"
            type="CreateAccountVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/MatchParent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/back"
            app:onClickCommand="@{viewModel.finisCommand}"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="61dp"
            android:text="@string/create_account_title"
            android:textColor="@color/color_4d4d4d"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_tl"
            style="@style/CreateAccountTextInputLayout"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/create_account_tv">

            <EditText
                android:id="@+id/password_et"
                style="@style/CreateAccountEditText"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_tl"
            style="@style/CreateAccountTextInputLayout"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/password_tl">

            <EditText
                android:id="@+id/confirm_password_et"
                style="@style/CreateAccountEditText"
                android:hint="@string/create_account_reenter_password"
                android:text="@={viewModel.confirmPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_btn"
            style="@style/CreateAccountButton"
            android:layout_marginTop="20dp"
            android:text="@string/create_account_create"
            android:textColor="@color/color_white"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_tl"
            app:onClickCommand="@{viewModel.createCommand}" />

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_account_or"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_btn" />

        <Button
            android:id="@+id/import_btn"
            style="@style/CreateAccountButton"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rectangle_round4_ffffff_strock1_979797"
            android:text="@string/create_account_import_account"
            android:textColor="@color/color_4d4d4d"
            app:layout_constraintTop_toBottomOf="@+id/or_tv"
            app:onClickCommand="@{viewModel.importCommand}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>